# dqc_simulator

./: .gitignore  .readthedocs.yaml  CODEOWNERS  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: requirements.txt
docs/source/: LICENSE.md  api_reference.rst  conf.py  dqc_simulator.hardware.rst  dqc_simulator.qlib.rst  dqc_simulator.rst  dqc_simulator.software.rst  dqc_simulator.util.rst  getting_started.rst  index.rst  installation.rst  usage.rst  user_guide.rst
docs/source/hardware/: dqc_simulator.hardware.connections.rst  dqc_simulator.hardware.dqc_creation.rst  dqc_simulator.hardware.noise_models.rst  dqc_simulator.hardware.quantum_processors.rst
docs/source/qlib/: dqc_simulator.qlib.circuit_identities.rst  dqc_simulator.qlib.circuits.rst  dqc_simulator.qlib.gates.rst  dqc_simulator.qlib.remote_gate_scheme_info.rst  dqc_simulator.qlib.states.rst
docs/source/software/: dqc_simulator.software.ast2dqc_circuit.rst  dqc_simulator.software.compiler_preprocessing.rst  dqc_simulator.software.compilers.rst  dqc_simulator.software.dqc_circuit.rst  dqc_simulator.software.dqc_control.rst  dqc_simulator.software.link_layer.rst  dqc_simulator.software.partitioner.rst  dqc_simulator.software.physical_layer.rst  (+2 more)
examples/: from_monolithic_circuit.py  getting_started.py  multiple_monolithic_circuits.py  run_experiment.py  setup_hardware.py  setup_sim.py  take_experimental_shot.py
src/dqc_simulator/: custom_noise_models.py  dqc_executor.py  network.py
tests/integration_tests/: test_physical_layer_and_hardware_integration.py
(+79 files in other folders)
